plapp/static/style/site.css
@import url(goog-menus.css);
@import url(goog-menubutton.css);
@import url(goog-custom-button.css);

body {
  color: black;
  margin: 0;
  cursor: default;
  font-size: 15px;
}
body.progress {
  cursor: wait;
}
* {
  font-family: 'Droid Sans', Arial, sans-serif;
  font-family: Helvetica, Arial, sans-serif;
  font-weight: normal;
}
a {
  color: black;
  text-decoration: underline;
}
a img {
  border: 0;
}

#title {
  padding: 5px 0;
  background: #a4a4a4;
}
#title h1 {
  font-size: 16px;
  font-weight: bold;
  color: #fff;
  text-shadow: 0 2px 0 rgba(0, 0, 0, 0.3);
  margin: 0;
  padding-left: 22px;
}

#content {
  padding-top: 10px;
  padding-bottom: 10px;
}
#title h1, #content > div {
  width: 800px;
  margin: 0 auto;
}

#footer {
  text-align: center;
  font-size: 12px;
  margin-top: 20px;
  margin-bottom: 10px;
}
#footer p {
  padding: 0 10px;
  display: inline;
}
#footer a, #footer span {
  margin: 0 5px;
}

.appointment {
  background: #fff;
  width: 580px;
  border: 1px solid;
  border-top-width: 1px;
  border-bottom-width: 3px;
  font-size: 14px;
}
.appointment, .appointment input, .appointment textarea {
  font-size: 13px;
}
.appointment h2 {
  background: #fff;
  position: relative;
  bottom: 5px;
  text-transform: uppercase;
  padding: 10px 10px 0 10px;
  font-weight: bold;
  font-size: 12px;
  display: none;
}

.menu-bar {
  padding: 0;
  border-bottom: 4px solid #eee;
  background: #fff;
  height: 27px;
}
.menu-bar * {
  font-size: 13px;
}
.menu-bar .account > *, .menu-bar .menu h1 {
  display: block;
  padding: 4px 8px;
  padding: 8px 8px 4px 8px;
  border-bottom: 4px solid transparent;
}
.menu-bar .account a:hover,
.menu-bar .menu h1:hover,
.menu-bar .menu.open h1 {
  border-bottom-color: #bcbdd3;
  background: #eeeff7;
}

.menu-bar .menu {
  float: left;
  margin-top: -8px;
}
.menu-bar .menu h1 {
  cursor: pointer;
  color: #666;
  padding-right: 20px;
}
.menu-bar .menu h1::after {
  content: "▾";
  font-size: 12px;
  position: absolute;
  margin-left: 6px;
}
.menu-bar .menu h1 b {
  font-weight: bold;
}
.menu-bar .menu ul {
  display: none;
}
.menu-bar .menu.open ul {
  display: block;
  position: absolute;
  background: #fff;
  border: 1px solid #bcbdd3;
  margin-top: -9px;
  width: 200px;
  list-style: none;
  padding: 0;
}
.menu-bar .menu.open ul li {
  overflow: hidden;
}
.menu-bar .menu.open ul li.separator {
  height: 8px;
}
.menu-bar .menu.open ul li > * {
  padding: 4px 8px;
  display: block;
}
.menu-bar .menu.open ul li > h2 {
  margin: 0;
  color: #666;
}
.menu-bar .menu.open ul li > a {
  text-decoration: none;
  cursor: pointer;
}
.menu-bar .menu.open ul li > a:hover {
  background: #eeeff7;
}
.menu-bar .menu.open ul li.radio > * {
  padding-left: 26px;
}
.menu-bar .menu.open ul li.radio.checked > *::before {
  content: '•';
  position: absolute;
  margin-left: -12px;
}

.menu-bar .account {
  float: right;
}
.menu-bar .account * {
  float: left;
}
.menu-bar .account a {
  color: #4e7bc6;
  text-decoration: none;
}
.menu-bar .account .email {
  font-weight: bold;
}

.side-help {
  float: right;
  width: 200px;
}
.side-help p {
  margin: 1em 0 0 0;
}
.side-help p:first-child {
  margin-top: 0;
}

#clockpuppets {
  position: fixed;
  bottom: -4px;
  right: 8px;
}

#browser-notice {
  background: yellow;
  font-size: 18px;
  padding: 10px;
  text-align: center;
}
#browser-notice b {
  font-weight: bold;
}
#browser-notice p {
  margin: 5px;
}
#browser-notice .browsers a {
  margin-right: 20px;
  font-size: 26px;
}

